<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AlarmToed</string>
    <string name="lightUp">Light up your RPi!</string>
    <string name="directions">Enter your IP Address to send your request.</string>
    <string name="action_settings">Settings</string>
    <string name="search_hint">Test</string>
    <string name="ipURL">Complete URL: http://</string>
    <string name="intensityTxt">Intensity (between 0 and 1)</string>
    <string name="lightIdTxt">Light ID (0 to 20):</string>
    <string name="lightIdHint">enter light id of the light you want lit</string>
    <string name="propagateTxt">Propagate?</string>
    <string name="addLightBtnMsg">Add light</string>
    <string name="currJSONReq">Current JSON request:</string>
    <string name="submitReqBtnTxt">Submit request!</string>
    <string name="enterURLHintMsg">enter your ip address</string>
    <string name="rpi">/rpi</string>
    <string name="title_activity_set_tasks_and_alarms">SetTasksAndAlarms</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_set_alarm">SetAlarm</string>
    <string name="title_activity_one_alarm">OneAlarm</string>
    <string name="title_activity_view_alarms">ViewAlarms</string>
    <string name="title_activity_alarm_lock_screen">AlarmLockScreen</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_all_alarms">AllAlarms</string>
    <string name="action_add">Add Alarm</string>

    <string-array name="category_array">
        <item>Select a category...</item>
        <item>Miscellaneous</item>
        <item>Class</item>
        <item>Errands</item>
        <item>Fitness</item>
        <item>Meeting</item>
        <item>Social</item>
    </string-array>
    <string-array name="priority_array">
        <item>Select a priority...</item>
        <item>Low</item>
        <item>Medium</item>
        <item>High</item>
    </string-array>

    <string name="title_activity_oauth">OAuth</string>
    <string name="title_activity_edit_alarm">EditAlarm</string>
    <string name="title_activity_help_screen">How to use this App!</string>
    <string name="action_help">Help</string>
    <string name="appDirections">\n1. Add an alarm for each task throughout the day (using the + button). Pro-tip: break down each task into smaller tasks so that they are more manageable. Hit each sub-task systematically as each alarm goes off throughout the day. Before you know it, you’ll be done with your work! (Congratulations!)
    \n\n2. Customize each alarm based on the type of task you have. Each Task Category is color coded and corresponds to the color of the LED lights attached to the Raspberry Pi.
    \n\nClass = Yellow; Errands = Green; Fitness = Purple; Meeting = Orange; Social = Pink; Miscellaneous = Blue.
    \n\n3. Set priorities to each task! A higher priority level results in brighter LED lights, giving you a stronger sense of urgency as you power through your task!
 </string>

</resources>
