<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".LightUpRPi">

    <TextView
        android:text="@string/lightUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/lightRPiMsg"
        android:textSize="30sp"
        android:paddingLeft="15sp"
        android:paddingRight="15sp" />


    <TextView
        android:text="@string/directions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lightRPiMsg"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textSize="18sp"
        android:paddingTop="10sp"
        android:id="@+id/descriptionTxt"
        android:paddingLeft="15sp"
        android:paddingRight="15sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ipURL"
        android:id="@+id/ipUrl"
        android:layout_marginTop="190dp"
        android:textSize="18sp"
        android:textIsSelectable="false"
        android:paddingLeft="15sp"
        android:paddingRight="15sp"
        android:layout_below="@+id/descriptionTxt"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />


    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/enterUrl"
        android:layout_toEndOf="@+id/ipUrl"
        android:inputType="textUri"
        android:hint="@string/enterURLHintMsg"
        android:paddingLeft="15sp"
        android:paddingRight="15sp"
        android:layout_alignBottom="@+id/ipUrl"
        android:layout_toRightOf="@+id/ipUrl" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submitReqBtnTxt"
        android:id="@+id/submitReqBtn"
        android:onClick="sendRequest"
        android:layout_marginTop="59dp"
        android:layout_below="@+id/ipUrl"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/lightRPiMsg"
        android:layout_alignEnd="@+id/lightRPiMsg" />



</RelativeLayout>
